--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -88,10 +88,12 @@ jobs:
 #        run: |
 #          npm install -g npm@10.3.0
           
-        # Install Serverless Framework
+        # Install Serverless Framework AND its WSGI PLUGIN
       - name: Install Serverless Framework
         run: |
           npm install -g serverless 
+          npm install serverless-wsgi
+
           
         # Deploy
       - name: Deploy to AWS Lambda with Serverless
