--- a/serverless.yml
+++ b/serverless.yml
@@ -55,6 +55,11 @@ functions:
           method: ANY
           cors: true
 
+
+#This plugin helps to convert the API Gateway event format into a format that your Flask app can understand.
+plugins:
+  - serverless-wsgi
+
     # The ports parameter HERE specifies the ports to be EXPOSED IN THE DOCKER CONTAINER when the Lambda function INSIDE is an application that listens on a specific port.
     # The left of ":" is the port of the host machine to use to access the App and the right is the port the application inside the container listens to (from the APP DEFINITION CODE).
     # DIFFERENT from "EXPOSE in Dockerfile" that is used to inform Docker that the container will listen (receive requests) on which ports at runtime. That does not actually publish the 
