Added path section in serverless.yml file

--- a/serverless.yml
+++ b/serverless.yml
@@ -48,12 +48,18 @@ functions:
     # path parameter, and proxy+ is a wildcard that matches any path and captures it as a parameter named proxy. With this configuration, your Lambda function will be triggered
     # for any HTTP request under the base path specified (/ in this case). The ACTUAL route information will be available as a parameter in your Lambda function (event.pathParameters.proxy).
     # If your App routes start with /api, you can use path: /api/{proxy+}
+    # If this section is removed Serverless Framework won't configure an API Gateway endpoint for your Lambda function, and you WON'T HAVE AN HTTP endpoint to trigger it.
     events:
       - http:
           path: /
           #path: /{proxy+}
           method: ANY
           cors: true
+      # ADDITIONAL ROUTES BELOW
+#      - http:
+#          path: /hello
+#          method: ANY
+#          cors: true
 
 
 #This plugin helps to convert the API Gateway event format into a format that your Flask app can understand.
